--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{url_to_the_site_root}}">TimeOff.Management</a>
+      <a class="navbar-brand" href="{{url_to_the_site_root}}">Devgo TimeOff.Management</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,5 +87,3 @@
 {{/if}}
 
 </div>
-
-
